# project

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.txt
include/: audio_manager.h  bookshelf.h  character.h  coffee.h  collectible.h  collectible_manager.h  constants.h  enemy.h  engine.h  freeze.h  game_management.h  game_state.h  note.h  obstacle.h  pastexam.h  playground.h  powerup_icon.h  score_page.h  settings.h  table.h  tool.h  vision.h
src/: audio_manager.cpp  bookshelf.cpp  character.cpp  coffee.cpp  collectible.cpp  collectible_manager.cpp  enemy.cpp  engine.cpp  freeze.cpp  game_management.cpp  menu.cpp  note.cpp  obstacle.cpp  pastexam.cpp  playground.cpp  score_page.cpp  settings.cpp  table.cpp  tool.cpp  vision.cpp
test/: test1.txt
